--- a/zadanie8/Pipfile
+++ b/zadanie8/Pipfile
@@ -5,6 +5,9 @@ name = "pypi"
 
 [packages]
 django = "*"
+djangorestframework = "*"
+mysqlclient = "*"
+django-debug-toolbar = "*"
 
 [dev-packages]
 
