Required endpoints are secured and user can login at 'auth/jwt/create' endpoint

--- a/zadanie8/Pipfile
+++ b/zadanie8/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 djangorestframework = "*"
 mysqlclient = "*"
 django-debug-toolbar = "*"
+djoser = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
