--- a/storefront/Pipfile
+++ b/storefront/Pipfile
@@ -13,6 +13,8 @@ djoser = "*"
 djangorestframework-simplejwt = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.10"
